Crude initial universal support TODO: AXIS_MAX_IN etc redefined multiple times Check for further possible problematic variable redefinitions

--- a/platformio.ini
+++ b/platformio.ini
@@ -149,7 +149,7 @@ build_flags = ${in-snes.build_flags} ${out-debug.build_flags}
 
 [env:micro-snes-radio]
 extends     = micro, in-snes, out-radio
-build_src_filter  = ${in-snes.build_src_filter}  ${out-radio.build_src_filter}
+build_src_filter  = ${in-snes.build_src_filter}  ${out-radio.build_src_filter}lib_deps
 build_flags = ${in-snes.build_flags} ${out-radio.build_flags}
 
 [env:micro-snes-usbradio]
@@ -505,6 +505,18 @@ build_src_filter  = ${ohm.build_src_filter}
 [env:micro-ohm]
 extends     = micro, ohm
 build_src_filter  = ${ohm.build_src_filter}
+
+# universal input
+
+[universal]
+build_flags = ${common.build_flags} -D UNIVERSAL_MODE
+build_src_filter =-<*> +<universal.cpp>
+lib_deps = ${in-wii.lib_deps}
+
+[env:esp32-universal-out-bt]
+extends     = esp32, universal
+build_src_filter  = ${universal.build_src_filter}   ${out-bt.build_src_filter}
+
 
 #[env:native]
 #build_src_filter = -<*> +<test_N64Esp32.cpp>
