--- a/platformio.ini
+++ b/platformio.ini
@@ -514,9 +514,19 @@ build_src_filter =-<*> +<universal.cpp>
 lib_deps = ${in-wii.lib_deps}
 
 [env:esp32-universal-out-bt]
-extends     = esp32, universal
+extends     = esp32, universal, out-bt
 build_src_filter  = ${universal.build_src_filter}   ${out-bt.build_src_filter}
+build_flags = ${universal.build_flags} ${out-bt.build_flags}
 
+[env:esp32-universal-out-br]
+extends     = esp32, universal, out-br
+build_src_filter  = ${universal.build_src_filter}   ${out-br.build_src_filter}
+build_flags = ${universal.build_flags} ${out-br.build_flags}
+
+[env:esp32-universal-out-debug]
+extends     = esp32, universal, out-debug
+build_src_filter  = ${universal.build_src_filter}   ${out-debug.build_src_filter}
+build_flags = ${universal.build_flags} ${out-debug.build_flags}
 
 #[env:native]
 #build_src_filter = -<*> +<test_N64Esp32.cpp>
