--- a/platformio.ini
+++ b/platformio.ini
@@ -56,12 +56,14 @@ board_build.usb_product = "8BitDo SN30 Pro+"
 board_vendor = "8BitDo"
 
 [out-bt]
-build_flags = -DGAMEPAD_OUTPUT=3
-build_src_filter = +<gamepad/ESP32-BLE-Gamepad>
+build_flags = -DGAMEPAD_OUTPUT=3 -fexceptions
+lib_deps = lemmingdev/ESP32-BLE-Gamepad@^0.5.2, h2zero/NimBLE-Arduino@^1.4.1
+build_src_filter = 
 
 [out-br]
-build_flags = -D BLUERETRO_MAPPING -DGAMEPAD_OUTPUT=3
-build_src_filter = +<gamepad/ESP32-BLE-Gamepad>
+build_flags = -DGAMEPAD_OUTPUT=3 -fexceptions -D BLUERETRO_MAPPING
+lib_deps = lemmingdev/ESP32-BLE-Gamepad@^0.5.2, h2zero/NimBLE-Arduino@^1.4.1
+build_src_filter = 
 
 [out-usbradio]
 extends     = out-usb, out-radio
@@ -508,25 +510,26 @@ build_src_filter  = ${ohm.build_src_filter}
 
 # universal input
 
-[universal]
+[in-universal]
 build_flags = ${common.build_flags} -D UNIVERSAL_MODE
 build_src_filter =-<*> +<universal.cpp>
 lib_deps = ${in-wii.lib_deps}
 
-[env:esp32-universal-out-bt]
-extends     = esp32, universal, out-bt
-build_src_filter  = ${universal.build_src_filter}   ${out-bt.build_src_filter}
-build_flags = ${universal.build_flags} ${out-bt.build_flags}
+[env:esp32-universal-bt]
+extends     = esp32, in-universal, out-bt
+build_src_filter  = ${in-universal.build_src_filter}   ${out-bt.build_src_filter}  -DGAMEPAD_COUNT=1
+build_flags = ${in-universal.build_flags} ${out-bt.build_flags}
+lib_deps = ${out-bt.lib_deps}, ${in-universal.lib_deps}
 
-[env:esp32-universal-out-br]
-extends     = esp32, universal, out-br
-build_src_filter  = ${universal.build_src_filter}   ${out-br.build_src_filter}
-build_flags = ${universal.build_flags} ${out-br.build_flags}
+[env:esp32-universal-br]
+extends     = esp32, in-universal, out-br
+build_src_filter  = ${in-universal.build_src_filter}   ${out-br.build_src_filter}  -DGAMEPAD_COUNT=1
+build_flags = ${in-universal.build_flags} ${out-br.build_flags}
 
 [env:esp32-universal-out-debug]
-extends     = esp32, universal, out-debug
-build_src_filter  = ${universal.build_src_filter}   ${out-debug.build_src_filter}
-build_flags = ${universal.build_flags} ${out-debug.build_flags}
+extends     = esp32, in-universal, out-debug
+build_src_filter  = ${in-universal.build_src_filter}   ${out-debug.build_src_filter}  -DGAMEPAD_COUNT=1
+build_flags = ${in-universal.build_flags} ${out-debug.build_flags}
 
 #[env:native]
 #build_src_filter = -<*> +<test_N64Esp32.cpp>
