Implement updated ESP32-BLE mode w/ fast NimBLE So far only single player supported in this mode, no Saturn

--- a/platformio.ini
+++ b/platformio.ini
@@ -63,6 +63,17 @@ build_src_filter = +<gamepad/ESP32-BLE-Gamepad>
 build_flags = -D BLUERETRO_MAPPING -DGAMEPAD_OUTPUT=3
 build_src_filter = +<gamepad/ESP32-BLE-Gamepad>
 
+[out-fastbt]
+build_unflags = -DGAMEPAD_COUNT
+build_flags = -DGAMEPAD_OUTPUT=6 -fexceptions -DGAMEPAD_COUNT=1
+lib_deps = lemmingdev/ESP32-BLE-Gamepad@^0.5.2, h2zero/NimBLE-Arduino@^1.4.1
+
+[out-fastbr]
+build_unflags = -DGAMEPAD_COUNT
+build_flags = -D BLUERETRO_MAPPING -DGAMEPAD_OUTPUT=6 -fexceptions -DGAMEPAD_COUNT=1
+
+lib_deps = lemmingdev/ESP32-BLE-Gamepad@^0.5.2, h2zero/NimBLE-Arduino@^1.4.1
+
 [out-usbradio]
 extends     = out-usb, out-radio
 build_flags = -DGAMEPAD_OUTPUT=4
@@ -132,6 +143,16 @@ extends     = esp32, in-snes, out-br
 build_src_filter  = ${in-snes.build_src_filter}  ${out-br.build_src_filter}
 build_flags = ${in-snes.build_flags} ${out-br.build_flags}
 
+[env:esp32-snes-fastbt]
+extends     = esp32, in-snes, out-fastbt
+build_src_filter  = ${in-snes.build_src_filter}
+build_flags = ${in-snes.build_flags} ${out-fastbt.build_flags} -DGAMEPAD_COUNT=1
+
+[env:esp32-snes-fastbr]
+extends     = esp32, in-snes, out-fastbr
+build_src_filter  = ${in-snes.build_src_filter}
+build_flags = ${in-snes.build_flags} ${out-fastbr.build_flags} -DGAMEPAD_COUNT=1
+
 [env:esp32-snes-debug]
 extends     = esp32, in-snes, out-debug
 build_src_filter  = ${in-snes.build_src_filter}  ${out-debug.build_src_filter}
@@ -183,6 +204,16 @@ extends     = esp32, in-n64-esp32, out-br
 build_src_filter  = ${in-n64-esp32.build_src_filter}  ${out-br.build_src_filter}
 build_flags = ${in-n64-esp32.build_flags} ${out-br.build_flags}
 
+[env:esp32-n64-fastbt]
+extends     = esp32, in-n64-esp32, out-fastbt
+build_src_filter  = ${in-n64-esp32.build_src_filter}
+build_flags = ${in-n64-esp32.build_flags} ${out-fastbt.build_flags}
+
+[env:esp32-n64-fastbr]
+extends     = esp32, in-n64-esp32, out-fastbr
+build_src_filter  = ${in-n64-esp32.build_src_filter}
+build_flags = ${in-n64-esp32.build_flags} ${out-fastbr.build_flags}
+
 [env:esp32-n64-debug]
 extends     = esp32, in-n64-esp32, out-debug
 build_src_filter  = ${in-n64-esp32.build_src_filter}  ${out-debug.build_src_filter}
@@ -232,6 +263,16 @@ extends     = esp32, in-genesis, out-br
 build_src_filter  = ${in-genesis.build_src_filter}  ${out-br.build_src_filter}
 build_flags = ${in-genesis.build_flags} ${out-br.build_flags}
 
+[env:esp32-genesis-fastbt]
+extends     = esp32, in-genesis, out-fastbt
+build_src_filter  = ${in-genesis.build_src_filter}
+build_flags = ${in-genesis.build_flags} ${out-fastbt.build_flags}
+
+[env:esp32-genesis-fastbr]
+extends     = esp32, in-genesis, out-fastbr
+build_src_filter  = ${in-genesis.build_src_filter}
+build_flags = ${in-genesis.build_flags} ${out-fastbr.build_flags}
+
 [env:esp32-genesis-debug]
 extends     = esp32, in-genesis, out-debug
 build_src_filter  = ${in-genesis.build_src_filter}  ${out-debug.build_src_filter}
@@ -280,6 +321,16 @@ build_flags = ${in-psx.build_flags} ${out-bt.build_flags}
 extends     = esp32, in-psx, out-br
 build_src_filter  = ${in-psx.build_src_filter}  ${out-br.build_src_filter}
 build_flags = ${in-psx.build_flags} ${out-br.build_flags}
+
+[env:esp32-psx-fastbt]
+extends     = esp32, in-psx, out-fastbt
+build_src_filter  = ${in-psx.build_src_filter}
+build_flags = ${in-psx.build_flags} ${out-fastbt.build_flags}
+
+[env:esp32-psx-fastbr]
+extends     = esp32, in-psx, out-fastbr
+build_src_filter  = ${in-psx.build_src_filter}
+build_flags = ${in-psx.build_flags} ${out-fastbr.build_flags}
 
 [env:esp32-psx-debug]
 extends     = esp32, in-psx, out-debug
@@ -363,6 +414,16 @@ extends     = esp32, in-saturn, out-bt
 build_src_filter  = ${in-saturn.build_src_filter}  ${out-br.build_src_filter}
 build_flags = ${in-saturn.build_flags} ${out-br.build_flags}
 
+[env:esp32-saturn-fastbt]
+extends     = esp32, in-saturn, out-fastbt
+build_src_filter  = ${in-saturn.build_src_filter}
+build_flags = ${in-saturn.build_flags} ${out-fastbt.build_flags}
+
+[env:esp32-saturn-fastbr]
+extends     = esp32, in-saturn, out-fastbr
+build_src_filter  = ${in-saturn.build_src_filter}
+build_flags = ${in-saturn.build_flags} ${out-fastbr.build_flags}
+
 [env:esp32-saturn-debug]
 extends     = esp32, in-saturn, out-debug
 build_src_filter  = ${in-saturn.build_src_filter}  ${out-debug.build_src_filter}
@@ -414,6 +475,18 @@ extends     = esp32, in-wii, out-br
 build_src_filter  = ${in-wii.build_src_filter}  ${out-br.build_src_filter}
 build_flags = ${in-wii.build_flags} ${out-br.build_flags}
 
+[env:esp32-wii-fastbt]
+extends     = esp32, in-wii, out-fastbt
+build_src_filter  = ${in-wii.build_src_filter}
+build_flags = ${in-wii.build_flags} ${out-fastbt.build_flags}
+lib_deps = ${in-wii.lib_deps}, ${out-fastbt.lib_deps}
+
+[env:esp32-wii-fastbr]
+extends     = esp32, in-wii, out-fastbr
+build_src_filter  = ${in-wii.build_src_filter}
+build_flags = ${in-wii.build_flags} ${out-fastbr.build_flags}
+lib_deps = ${in-wii.lib_deps}, ${out-fastbr.lib_deps}
+
 [env:esp32-wii-debug]
 extends     = esp32, in-wii, out-debug
 build_src_filter  = ${in-wii.build_src_filter}  ${out-debug.build_src_filter}
@@ -462,6 +535,16 @@ build_flags = ${in-debug.build_flags} ${out-bt.build_flags}
 extends     = esp32, in-debug, out-br
 build_src_filter  = ${in-debug.build_src_filter}  ${out-br.build_src_filter}
 build_flags = ${in-debug.build_flags} ${out-br.build_flags}
+
+[env:esp32-debug-fastbt]
+extends     = esp32, in-debug, out-fastbt
+build_src_filter  = ${in-debug.build_src_filter}
+build_flags = ${in-debug.build_flags} ${out-fastbt.build_flags}
+
+[env:esp32-debug-fastbr]
+extends     = esp32, in-debug, out-fastbr
+build_src_filter  = ${in-debug.build_src_filter}
+build_flags = ${in-debug.build_flags} ${out-fastbr.build_flags}
 
 [env:esp32-debug-debug]
 extends     = esp32, in-debug, out-debug
