Changes to GAMEPAD_COUNT for Universal output mode Replaces most use with gamepad_count variable GAMEPAD_COUNT_MAX implemented Per controller max constants implemented Minor fixes

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@
 # CODE_PLATFORM == 2: optimized for micro
 
 [common]
-# change GAMEPAD_COUNT if you want
+# change gamepad_count if you want
 build_flags = -DGAMEPAD_COUNT=2
 # dev: add -save-temps above for troubleshooting macros
 
@@ -38,16 +38,16 @@ framework = arduino
 # outputs
 
 [out-debug]
-build_flags = -DGAMEPAD_OUTPUT=0 -DDEBUG=1
+build_flags = -DGAMEPAD_OUTPUT=0 -DDEBUG=1  -DGAMEPAD_COUNT_MAX=4
 build_src_filter = +<gamepad/Debug-Gamepad>
 
 [out-radio]
-build_flags = -DGAMEPAD_OUTPUT=1
+build_flags = -DGAMEPAD_OUTPUT=1  -DGAMEPAD_COUNT_MAX=4
 build_src_filter = +<gamepad/Radio-Gamepad>
 lib_deps = nRF24/RF24@^1.3.12
 
 [out-usb]
-build_flags = -DGAMEPAD_OUTPUT=2
+build_flags = -DGAMEPAD_OUTPUT=2  -DGAMEPAD_COUNT_MAX=4
 build_src_filter = +<gamepad/USB-Gamepad>
 framework = arduino
 platform = atmelavr
@@ -56,27 +56,25 @@ board_build.usb_product = "8BitDo SN30 Pro+"
 board_vendor = "8BitDo"
 
 [out-bt]
-build_flags = -DGAMEPAD_OUTPUT=3
+build_flags = -DGAMEPAD_OUTPUT=3  -DGAMEPAD_COUNT_MAX=4
 build_src_filter = +<gamepad/ESP32-BLE-Gamepad>
 
 [out-br]
-build_flags = -D BLUERETRO_MAPPING -DGAMEPAD_OUTPUT=3
+build_flags = -D BLUERETRO_MAPPING -DGAMEPAD_OUTPUT=3  -DGAMEPAD_COUNT_MAX=4
 build_src_filter = +<gamepad/ESP32-BLE-Gamepad>
 
 [out-fastbt]
-build_unflags = -DGAMEPAD_COUNT
-build_flags = -DGAMEPAD_OUTPUT=6 -fexceptions -DGAMEPAD_COUNT=1
+build_flags = -DGAMEPAD_OUTPUT=6 -fexceptions -DGAMEPAD_COUNT_MAX=1
 lib_deps = lemmingdev/ESP32-BLE-Gamepad@^0.5.2, h2zero/NimBLE-Arduino@^1.4.1
 
 [out-fastbr]
-build_unflags = -DGAMEPAD_COUNT
-build_flags = -D BLUERETRO_MAPPING -DGAMEPAD_OUTPUT=6 -fexceptions -DGAMEPAD_COUNT=1
+build_flags = -D BLUERETRO_MAPPING -DGAMEPAD_OUTPUT=6 -fexceptions -DGAMEPAD_COUNT_MAX=1
 
 lib_deps = lemmingdev/ESP32-BLE-Gamepad@^0.5.2, h2zero/NimBLE-Arduino@^1.4.1
 
 [out-usbradio]
 extends     = out-usb, out-radio
-build_flags = -DGAMEPAD_OUTPUT=4
+build_flags = -DGAMEPAD_OUTPUT=4  -DGAMEPAD_COUNT_MAX=1
 build_src_filter = ${out-usb.build_src_filter} ${out-radio.build_src_filter}
 extra_scripts = pre:hwids/usb.py
 board_build.usb_product = "8BitDo SN30 Pro+"
@@ -84,7 +82,7 @@ board_vendor = "8BitDo"
 
 [out-switchusb]
 # switch only supports 1 controller per dongle
-build_flags = -DGAMEPAD_OUTPUT=5 -DGAMEPAD_COUNT=1
+build_flags = -DGAMEPAD_OUTPUT=5 -DGAMEPAD_COUNT_MAX=1
 build_src_filter = +<gamepad/Switch-USB-Gamepad>
 lib_deps = https://github.com/OpenRetroPad/HID
 extra_scripts = pre:hwids/switch.py
@@ -131,7 +129,7 @@ lib_deps    = ${in-radio.lib_deps}, ${out-switchusb.lib_deps}
 
 [in-snes]
 build_src_filter = -<*> +<SnesNes.cpp>
-build_flags = ${common.build_flags} -DGAMEPAD_INPUT=2
+build_flags = ${common.build_flags}
 
 [env:esp32-snes-bt]
 extends     = esp32, in-snes, out-bt
@@ -146,12 +144,12 @@ build_flags = ${in-snes.build_flags} ${out-br.build_flags}
 [env:esp32-snes-fastbt]
 extends     = esp32, in-snes, out-fastbt
 build_src_filter  = ${in-snes.build_src_filter}
-build_flags = ${in-snes.build_flags} ${out-fastbt.build_flags} -DGAMEPAD_COUNT=1
+build_flags = ${in-snes.build_flags} ${out-fastbt.build_flags}
 
 [env:esp32-snes-fastbr]
 extends     = esp32, in-snes, out-fastbr
 build_src_filter  = ${in-snes.build_src_filter}
-build_flags = ${in-snes.build_flags} ${out-fastbr.build_flags} -DGAMEPAD_COUNT=1
+build_flags = ${in-snes.build_flags} ${out-fastbr.build_flags}
 
 [env:esp32-snes-debug]
 extends     = esp32, in-snes, out-debug
@@ -187,11 +185,11 @@ build_flags = ${in-snes.build_flags} ${out-switchusb.build_flags}
 
 [in-n64-esp32]
 build_src_filter = -<*> +<N64Esp32.cpp>
-build_flags = ${common.build_flags} -DGAMEPAD_INPUT=3 -DGAMEPAD_COUNT=1
+build_flags = ${common.build_flags} -DGAMEPAD_INPUT=3
 
 [in-n64-micro]
 build_src_filter = -<*> +<N64Micro.cpp>
-build_flags = ${common.build_flags} -DGAMEPAD_INPUT=3 -DGAMEPAD_COUNT=1
+build_flags = ${common.build_flags} -DGAMEPAD_INPUT=3
 lib_deps = https://github.com/OpenRetroPad/Nintendo
 
 [env:esp32-n64-bt]
@@ -294,12 +292,12 @@ build_flags = ${in-genesis.build_flags} ${out-debug.build_flags}
 [env:micro-genesis-radio]
 extends     = micro, in-genesis, out-radio
 build_src_filter  = ${in-genesis.build_src_filter}  ${out-radio.build_src_filter}
-build_flags = ${in-genesis.build_flags} ${out-radio.build_flags} -DGAMEPAD_COUNT=1
+build_flags = ${in-genesis.build_flags} ${out-radio.build_flags}
 
 [env:micro-genesis-usbradio]
 extends     = micro, in-genesis, out-usbradio
 build_src_filter  = ${in-genesis.build_src_filter}  ${out-usbradio.build_src_filter}
-build_flags = ${in-genesis.build_flags} ${out-usbradio.build_flags} -DGAMEPAD_COUNT=1
+build_flags = ${in-genesis.build_flags} ${out-usbradio.build_flags}
 
 [env:micro-genesis-switchusb]
 extends     = micro, in-genesis, out-switchusb
@@ -310,7 +308,7 @@ build_flags = ${in-genesis.build_flags} ${out-switchusb.build_flags}
 
 [in-psx]
 build_src_filter = -<*> +<Playstation.cpp>
-build_flags = ${common.build_flags} -DGAMEPAD_INPUT=5 -DGAMEPAD_COUNT=4
+build_flags = ${common.build_flags} -DGAMEPAD_INPUT=5
 
 [env:esp32-psx-bt]
 extends     = esp32, in-psx, out-bt
@@ -366,7 +364,7 @@ build_flags = ${in-psx.build_flags} ${out-switchusb.build_flags}
 
 [in-gc-micro]
 build_src_filter = -<*> +<N64Micro.cpp>
-build_flags = ${common.build_flags} -DGAMEPAD_INPUT=5 -DGAMEPAD_COUNT=1 -DGAMECUBE
+build_flags = ${common.build_flags} -DGAMEPAD_INPUT=5 -DGAMECUBE
 lib_deps = https://github.com/OpenRetroPad/Nintendo
 
 [env:micro-gc-usb]
@@ -414,15 +412,18 @@ extends     = esp32, in-saturn, out-bt
 build_src_filter  = ${in-saturn.build_src_filter}  ${out-br.build_src_filter}
 build_flags = ${in-saturn.build_flags} ${out-br.build_flags}
 
-[env:esp32-saturn-fastbt]
-extends     = esp32, in-saturn, out-fastbt
-build_src_filter  = ${in-saturn.build_src_filter}
-build_flags = ${in-saturn.build_flags} ${out-fastbt.build_flags}
+# WIP
+#[env:esp32-saturn-fastbt]
+#extends     = esp32, in-saturn, out-fastbt
+#build_src_filter  = ${in-saturn.build_src_filter}
+#build_flags = ${in-saturn.build_flags} ${out-fastbt.build_flags}
+#lib_deps = ${in-saturn.lib_deps}, ${out-fastbt.lib_deps}
 
-[env:esp32-saturn-fastbr]
-extends     = esp32, in-saturn, out-fastbr
-build_src_filter  = ${in-saturn.build_src_filter}
-build_flags = ${in-saturn.build_flags} ${out-fastbr.build_flags}
+#[env:esp32-saturn-fastbr]
+#extends     = esp32, in-saturn, out-fastbr
+#build_src_filter  = ${in-saturn.build_src_filter}
+#build_flags = ${in-saturn.build_flags} ${out-fastbr.build_flags}
+#lib_deps = ${in-saturn.lib_deps}, ${out-fastbr.lib_deps}
 
 [env:esp32-saturn-debug]
 extends     = esp32, in-saturn, out-debug
@@ -462,7 +463,7 @@ lib_deps    = ${in-saturn.lib_deps},   ${out-switchusb.lib_deps}
 
 [in-wii]
 build_src_filter = -<*> +<WiiExtension.cpp>
-build_flags = ${common.build_flags} -DGAMEPAD_INPUT=7 -DGAMEPAD_COUNT=1
+build_flags = ${common.build_flags} -DGAMEPAD_INPUT=7
 lib_deps = dmadison/Nintendo Extension Ctrl @ 0.8.3
 
 [env:esp32-wii-bt]
