Initial universal mode support Move common includes to main.h Macros to rename setup and loop functions in universal mode Rename variables to avoid conflicts

--- a/platformio.ini
+++ b/platformio.ini
@@ -69,7 +69,6 @@ lib_deps = lemmingdev/ESP32-BLE-Gamepad@^0.5.2, h2zero/NimBLE-Arduino@^1.4.1
 
 [out-fastbr]
 build_flags = -D BLUERETRO_MAPPING -DGAMEPAD_OUTPUT=6 -fexceptions -DGAMEPAD_COUNT_MAX=1
-
 lib_deps = lemmingdev/ESP32-BLE-Gamepad@^0.5.2, h2zero/NimBLE-Arduino@^1.4.1
 
 [out-usbradio]
@@ -520,6 +519,41 @@ extends     = micro, in-wii, out-switchusb
 build_src_filter  = ${in-wii.build_src_filter}  ${out-switchusb.build_src_filter}
 build_flags = ${in-wii.build_flags} ${out-switchusb.build_flags}
 lib_deps    = ${in-wii.lib_deps},   ${out-switchusb.lib_deps}
+
+# universal input
+
+[in-universal]
+build_flags = ${common.build_flags} -D UNIVERSAL_MODE
+build_src_filter =-<*> +<universal.cpp>
+lib_deps = ${in-wii.lib_deps}, ${in-saturn.lib_deps}
+
+[env:esp32-universal-bt]
+extends     = esp32, in-universal, out-bt
+build_src_filter  = ${in-universal.build_src_filter}   ${out-bt.build_src_filter}  
+build_flags = ${in-universal.build_flags} ${out-bt.build_flags}
+
+[env:esp32-universal-br]
+extends     = esp32, in-universal, out-br
+build_src_filter  = ${in-universal.build_src_filter}   ${out-br.build_src_filter}
+build_flags = ${in-universal.build_flags} ${out-br.build_flags}
+
+[env:esp32-universal-fastbt]
+extends     = esp32, in-universal, out-fastbt
+build_src_filter  = ${in-universal.build_src_filter}
+build_flags = ${in-universal.build_flags} ${out-fastbt.build_flags}
+lib_deps = ${out-fastbt.lib_deps}, ${in-universal.lib_deps}
+
+[env:esp32-universal-fastbr]
+extends     = esp32, in-universal, out-fastbr
+build_src_filter  = ${in-universal.build_src_filter}
+build_flags = ${in-universal.build_flags} ${out-fastbr.build_flags}
+lib_deps = ${out-fastbr.lib_deps}, ${in-universal.lib_deps}
+
+[env:esp32-universal-out-debug]
+extends     = esp32, in-universal, out-debug
+build_src_filter  = ${in-universal.build_src_filter}   ${out-debug.build_src_filter}
+build_flags = ${in-universal.build_flags} ${out-debug.build_flags}
+
 
 # debug input
 
